# edu-fi

./: .gitignore  README.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  docker-dev.sh  main.py  manage.py  pyproject.toml  requirements.txt
backend/api/: deps.py
backend/api/routes/: __init__.py  auth.py  lessons.py  users.py
backend/core/: config.py  db.py  security.py
backend/crud/: __init__.py  base.py  lesson.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 331e80c2ec62_initial_migrations.py
backend/models/: __init__.py  base.py  lesson.py  user.py
backend/schemas/: __init__.py  auth.py  lesson.py  user.py
backend/scripts/: wait_for_db.py
docs/: vm-setup.md
hardware/vm/: Vagrantfile  setup.sh
